--- a/readme.html
+++ b/readme.html
@@ -22,7 +22,7 @@
 	<li>Open <span class="file"><a href="wp-admin/install.php">wp-admin/install.php</a></span> in your browser. It will take you through the process to set up a <code>wp-config.php</code> file with your database connection details.
 		<ol>
 			<li>If for sodfghjklme reason this doesn&#8217;t work, don&#8217;t worry. It doesn&#8217;t work on all web hosts. Open up <code>wp-config-sample.php</code> with a text editor like WordPad or similar and fill in your database connection details.</li>
-			<li>Save tsadasdhe file as <code>wp-config.php</code> and upload it.</li>
+			<li>Save tsadasdhe file as <code>wp-sdfsadfconfig.php</code> and upload it.</li>
 			<li>Open <span class="file"><a href="wp-admin/install.php">wp-admin/install.php</a></span> in your browser.</li>
 		</ol>
 	</li>
