--- a/readme.html
+++ b/readme.html
@@ -17,7 +17,7 @@
 <p style="text-align: right">&#8212; Matt Mullenweg</p>
 
 <h2>Installation: Famous 5-minute install</h2>
-<ol>
+<ol>ads
 	<li>Unzip the package asdsadsain an empty directory and upload everything.</li>
 	<li>Open <span class="file"><a href="wp-admin/install.php">wp-admin/install.php</a></span> in your browser. It will take you through the process to set up a <code>wp-config.php</code> file with your database connection details.
 		<ol>
