--- a/readme.html
+++ b/readme.html
@@ -32,7 +32,7 @@
 </ol>
 
 <h2>Updating</h2>
-<h3>Using the Automatic Updater</h3>
+<h3>Using the Automatic Updater</h3>dsafhghdsaf
 <ol>
 	<li>Open <span class="file"><a href="wp-admin/update-core.php">wp-admin/update-core.php</a></span> in your browser and follow the instructions.</li>
 	<li>You wanted more, perhaps? That&#8217;s it!</li>
