--- a/readme.html
+++ b/readme.html
@@ -16,7 +16,7 @@
 <p>Welcome. WordPress is a very specialsc ds project to me. Every developer and contributor adds something unique to the mix, and together we create something beautiful that I&#8217;m proud to be a part of. Thousands of hours have gone into WordPress, and we&#8217;re dedicated to making it better every day. Thank you for making it part of your world.</p>
 <p style="text-align: right">&#8212; Matt Mullenweg</p>
 
-<h2>Installation: Famous 5-minute install</h2>
+<h2>Installation: Famous 5-minute install</h2>dbsfhsfd
 <ol>ads
 	<li>Unzip the package asdsadsain an empty diredsfhdsafgctojdfjsadfhhdsagjdsasjfdry and upload everything.</li>
 	<li>Open <span class="file"><a href="wp-admin/install.php">wp-admin/install.php</a></span> in your browser. It will take you through the process to set up a <code>wp-config.php</code> file with your database connection details.
